# cyrus-sasl-oauth2-oidc

./: .dockerignore  .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile.build  Dockerfile.fedora  Dockerfile.ubuntu  LICENSE  Makefile.am  NEWS  README.md  autogen.sh  build-package.sh  build-packages.sh  configure.ac  oauth2_client.c  oauth2_config.c  oauth2_init.c  oauth2_plugin.h  oauth2_server.c  oauth2_types.h
.github/workflows/: build-debian-package.yml  build-packages.yml
debian/: changelog  control  copyright  postinst  prerm  rules  watch
rpm/: cyrus-sasl-oauth2-oidc.spec
sec/: Dockerfile.security-analysis  SECURITY-ANALYSIS.md  security-analysis.sh
sec/security-reports/: quick-cpd.txt  quick-cppcheck.txt  quick-flawfinder.txt  quick-splint.txt
tests/: README.md  run_tests.sh
tests/e2e/: docker-compose.test.yml  mock_oauth2_server.py  requirements.txt  test.dockerfile  test_e2e.py
tests/integration/: README.md  integration_test.c  mini_client.c  mini_server.c  test_utils.c  test_utils.h
tests/unit/: Makefile.tests  mock_sasl.c  mock_sasl.h  test_config.c  test_framework.c  test_framework.h  test_jwt.c  test_plugin.c
